Thu Jun 27 16:50:19 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp:
	* ace/TP_Reactor.h:
	* ace/TP_Reactor.i: Moved common code in get_socket_event_info ()
	  to a new method clear_handle_read_set () and simplified the code
	  in get_notify_handle () so that it improves readability.

Thu Jun 27 20:26:33 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* tests/DLL_Test.cpp: Define retval before preprocessor checks to
	  fix Lynx build problem.

Thu Jun 27 14:32:50 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/nightlybuilds/builds.lst: Moved Fuzz, DLL_Core, DLL_Debug
	  builds to the new scoreboard also.

Thu Jun 27 07:47:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/tests/HttpCharStream_Test.cpp:
          Fixed BCB Unicode build errors.

        * ACEXML/common/URL_Addr.h:
          Documentation update.

Wed Jun 26 09:56:38 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/msvc_auto_compile.pl: Changed the list of XML related
	  directory name from XML to ACEXML.

Wed Jun 26 13:55:01 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* examples/Reactor/Multicast/Log_Wrappers.cpp:
	* examples/Reactor/Ntalker/Log_Wrappers.cpp:
	  Remove references to SOCK_Dgram_Mcast_T.

Tue Jun 25 15:13:49 2002  Steve Huston  <shuston@riverace.com>

        * ace/Basic_Types.h: Added ACE_WIN64 versions of
          ACE_SSIZE_T_FORMAT_SPECIFIER and ACE_SIZE_T_FORMAT_SPECIFIER.

Tue Jun 25 23:22:09 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/SOCK_Dgram_Mcast.cpp:
	* ace/SOCK_Dgram_Mcast.h:
	* ace/SOCK_Dgram_Mcast.i:
	* ace/SOCK_Dgram_Mcast_T.cpp: Removed.
	* ace/SOCK_Dgram_Mcast_T.h: Removed.
	* ace/SOCK_Dgram_Mcast_T.i: Removed.
	* ace/QoS/SOCK_Dgram_Mcast_QoS.cpp:
	* ace/QoS/SOCK_Dgram_Mcast_QoS.h:
	  Reverted these files to before June 9.  Existing code in QoS and
	  AVStreams were broken do to the changes.

Tue Jun 25 14:45:31 2002  Steve Huston  <shuston@riverace.com>
